--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+:root{
+    --primary-color: #9B3B91;
+    --dark: #000000;
+    --dark-grey: #6d6d6d;
+    --light-grey: #F0F0F0;
+}
 
 body{
   font-family: 'Inter', sans-serif;
@@ -15,5 +21,5 @@ body{
 }
 
 .nav-links:hover{
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid var(--dark);
 }
