--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@
 }
 
 body{
-  font-family: 'Inter', sans-serif;
+    min-height: 100vh;
+    font-family: 'Inter', sans-serif;
 }
 
 .nav-links:hover{
