Completed overview page

--- a/src/index.css
+++ b/src/index.css
@@ -133,3 +133,20 @@ body{
 .auth-pages{
     scrollbar-width: none;
 }
+
+/* Select element style */
+
+.custom-select {
+    appearance: none;
+    /* Remove default arrow */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url('data:image/svg+xml;utf8,<svg fill="white" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right 1rem center;
+    background-size: 1rem;
+    padding-right: 2.5rem;
+    outline: none;
+    color: white;
+    border: none;
+}
